Fix rich text bock element spacing

--- a/src/components/Book/Preview/index.module.scss
+++ b/src/components/Book/Preview/index.module.scss
@@ -4,7 +4,7 @@
     width: 15rem;
     height: 20rem;
     overflow: hidden;
-    display: inline-block;
+    display: block;
     transition: $transition-duration;
 
     .coverImage {
