--- a/src/components/BookCategory/Preview/index.module.scss
+++ b/src/components/BookCategory/Preview/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/global.scss';
 
 .container {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     width: 15rem;
     height: 10rem;
