--- a/src/components/Competition/Preview/index.module.scss
+++ b/src/components/Competition/Preview/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/global.scss';
 
 .container {
-    display: inline-block;
+    display: flex;
     color: black;
     text-decoration: none;
     max-width: 15rem;
@@ -9,6 +9,8 @@
     font-size: 1.5rem;
     font-weight: bold;
     box-shadow: 0 0 0.3rem grey;
+    align-items: center;
+    justify-content: center;
     transition: $transition-duration;
 
     &:hover {
