--- a/src/components/InfoCategory/Preview/index.module.scss
+++ b/src/components/InfoCategory/Preview/index.module.scss
@@ -3,7 +3,7 @@
 .container {
     color: black;
     text-decoration: none;
-    display: inline-grid;
+    display: grid;
     grid-auto-flow: column;
     grid-gap: 1rem;
     align-items: center;
